Fix text disappearing behind nav-bar on clicking anchor elements bug

--- a/Code/Bash_Scripting/Bash.css
+++ b/Code/Bash_Scripting/Bash.css
@@ -1,3 +1,9 @@
+/*https://stackoverflow.com/a/56467997/8742428*/
+/* Text disappearing behind nav-bar on clicking anchor elements */
+html {
+    scroll-padding-top: 75px; /* height of sticky header */
+}
+
 /*-- change navbar dropdown color --*/
 .navbar-dark .navbar-nav .nav-link {
     color: rgba(255, 255, 255, 1);
